fix .bg-editor-hr-wrap margins

--- a/src/assets/scss/boldgrid/_margin-fix.scss
+++ b/src/assets/scss/boldgrid/_margin-fix.scss
@@ -206,8 +206,15 @@
 			}
 			.container {
 				.row {
-					margin-left: 20px;
-					margin-right: 20px;
+					&:not( .bg-editor-hr-wrap ) {
+						margin-left: 20px;
+						margin-right: 20px;
+					}
+					&.bg-editor-hr-wrap {
+						> div {
+							padding-left:0px;
+						}
+					}
 				}
 			}
 			.container-fluid {
